--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "font-awesome": "^4.7.0",
     "mdb-react-ui-kit": "^6.3.0",
     "mdbreact": "^5.2.0",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
