--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # compiled output
-/dist
+# /dist
 /node_modules
 
 # Logs
@@ -33,5 +33,3 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-
-.env
