--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.2.7",
+    "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "9.0.0",
     "@nestjs/passport": "9.0.0",
     "@nestjs/platform-express": "^9.0.0",
-    "@prisma/client": "^5.4.2",
+    "@nestjs/serve-static": "^4.0.0",
+    "@prisma/client": "^4.5.0",
     "@types/bcryptjs": "^2.4.4",
-    "@types/cors": "^2.8.14",
+    "@types/cors": "^2.8.12",
     "@types/passport-local": "1.0.34",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -42,7 +43,7 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
+    "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/cookie-parser": "^1.4.4",
